[package]
name = "link-shortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
stylist = { version = "0.13", features = ["yew_integration", "parser"] }
web-sys = { version = "0.3.68", features = ["HtmlTextAreaElement", "DomParser", "Document", "SupportedType", "Navigator", "Clipboard", "Window", "XmlSerializer", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "HtmlImageElement", "CanvasRenderingContext2d", "HtmlCanvasElement"] }
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
qrcode-generator = "4.1.9"
rand = "0.8.5"
futures = "0.3.30"