[package]
name = "link-shortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }
#yew-router = { git = "https://github.com/yewstack/yew.git" }
stylist = { version = "0.13", features = ["yew_integration", "parser"] }
web-sys = { version = "0.3.73", features = [
    "HtmlTextAreaElement",
    "DomParser",
    "Document",
    "SupportedType",
    "Navigator",
    "Clipboard",
    "Window",
    "XmlSerializer",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
] }
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
qrcode-generator = "5.0.0"
rand = "0.8.5"
futures = "0.3.30"
wasm-bindgen-futures = "0.4.41"
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.113"
